显示选择提示点

--- a/JiaoBaoYun-hb/css/utils/slide_navigatian.css
+++ b/JiaoBaoYun-hb/css/utils/slide_navigatian.css
@@ -1,7 +1,8 @@
 
 .mine-slider-indicator {
-/*	position: absolute;*/
-/*	bottom: 8px;*/
+	position: absolute;
+	bottom: 0px;
+	left: 40%;
 	width: 20%;
 	text-align: center;
 	background: 0 0
