--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,7 +10,6 @@
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-stroke-width: 0.2px;
 }
-
 .icon-bianji:before { content: "\3486"; }
 
 .icon-close:before { content: "\e646"; }
@@ -120,6 +119,8 @@
 .icon-fasong:before { content: "\e636"; }
 
 .icon-wenda1:before { content: "\e66d"; }
+
+.icon-qita11:before { content: "\e662"; }
 
 .icon-allfolder:before { content: "\e66a"; }
 
