--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi.css
@@ -21,32 +21,12 @@
 .mui-control-item:last-of-type{
 	height: 4rem;
 }
-.icon-bianji{
-	position: fixed;
-	bottom: 2rem;
-	right: 2rem;
-	z-index: 666;
-	font-size: 4rem;
-	color: white;
-	padding: 1rem;
-	background-color: #1296db;
-	border-radius: 50%;
-}
-.channel-icon{
-	width: 2rem;
-	vertical-align: middle;
-	margin-right: .5rem;
-}
-.icon-qita1{
+
+.icon-qita{
 	color:grey;
 }
 .more-navigation p{
 	line-height: 50%;
 }
-.imgs-container{
-	padding:0 3% ;
-}
-.answer-img{
-	width: 30%;
-	display: inline-block;
-}
+
+
