--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -64,6 +64,8 @@
 
 .icon-about:before { content: "\e605"; }
 
+.icon-zhuanjia:before { content: "\e63a"; }
+
 .icon-zanzan:before { content: "\e60b"; }
 
 .icon-zanzan1:before { content: "\e602"; }
