更改作业样式

--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -123,6 +123,7 @@ header .mui-icon-bars:before{
 	padding-top: 2rem;
 	font-size: 4rem;
 	color: darkgray;
+	max-width: 18%;
 }
 .header-title{
 	color: #404040;
