--- a/JiaoBaoYun-hb/css/quan/group-pInfo.css
+++ b/JiaoBaoYun-hb/css/quan/group-pInfo.css
@@ -15,3 +15,12 @@
 .info-remark{
 	color: #000000;
 }
+.mui-badge {
+	font-size: 1.2rem;
+	/*line-height: 1;
+	display: inline-block;
+	padding: 3px 6px;
+	color: #333;
+	border-radius: 100px;*/
+	background-color: transparent
+}
