--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,6 +10,7 @@
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-stroke-width: 0.2px;
 }
+
 .icon-bianji:before { content: "\3486"; }
 
 .icon-close:before { content: "\e646"; }
@@ -224,6 +225,6 @@
 
 .icon-shipinlei-xunhuanguiji:before { content: "\e634"; }
 
-.icon-ban:before { content: "\e637"; }
+.icon-jiaxiabiao:before { content: "\e639"; }
 
-.icon-jia0:before { content: "\e638"; }
+.icon-banxiabiao:before { content: "\e638"; }
