--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -11,137 +11,248 @@
 	/*颜色*/
 	color: white;
 }
-.common-color-darkgray{
+
+.common-color-darkgray {
 	/*颜色*/
 	color: darkgray;
 }
 
-.common-font-family-Regular{
+.common-font-family-Regular {
 	/*字体样式*/
-	font-family:'微软雅黑 Regular', '微软雅黑';
+	font-family: '微软雅黑 Regular', '微软雅黑';
 }
-.common-font-family-Bold{
+
+.common-font-family-Bold {
 	/*字体样式*/
-	font-family:'微软雅黑 Bold', '微软雅黑';
+	font-family: '微软雅黑 Bold', '微软雅黑';
 }
+
+
 /*header统一样式*/
-header:last-of-type{
+
+header:last-of-type {
 	/*背景颜色*/
 	background: #13b7f6;
-	font-family:'微软雅黑 Bold', '微软雅黑';
+	font-family: '微软雅黑 Bold', '微软雅黑';
 }
+
+
 /*header中的icon 白色*/
-header a{
-	color: white;
-}
-/*标题为白色*/
-h1:last-of-type{
+
+header a {
 	color: white;
 }
 
+
+/*标题为白色*/
+
+h1:last-of-type {
+	color: white;
+}
+
+
 /*字体font-size：62.5%*/
-html{font-size: 62.5%;}
+
+html {
+	font-size: 62.5%;
+}
+
+
 /**常规大小*/
-body{font-size: 1.318rem; font-style: normal;}
+
+body {
+	font-size: 1.318rem;
+	font-style: normal;
+}
+
+
 /**粗体字体大小*/
-b{
+
+b {
 	font-size: 1.2rem;
 	color: #000000;
 }
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  font-size: 1.5rem;
+
+::-webkit-input-placeholder {
+	/* Chrome/Opera/Safari */
+	font-size: 1.5rem;
 }
+
+
 /**段落字体大小*/
-p{font-size: 1.2rem;}
+
+p {
+	font-size: 1.2rem;
+}
+
+
 /**最小字体*/
+
+
 /*small{font-size:1.2rem}*/
+
+
 /*1.9rem为标题 */
-h4{font-size:1.8rem}
+
+h4 {
+	font-size: 1.8rem
+}
+
+
 /*1.7rem为副标题 */
-h5{font-size:1.7rem}
+
+h5 {
+	font-size: 1.7rem
+}
+
+
 /*1.6为中间字体大小*/
-h6{font-size:1.5rem}
+
+h6 {
+	font-size: 1.5rem
+}
+
 
 /*分情况来做,不是所有页面都需要字体随着屏幕大小改变而改变的.*/
-@media only screen and (min-width:320px) and (max-width:359px){
-    html{font-size:50% !important;}
+
+@media only screen and (min-width:320px) and (max-width:359px) {
+	html {
+		font-size: 50% !important;
+	}
 }
+
+
 /*三星大屏幕机最低宽度:note2-note3,S2-S4*/
-@media only screen and (min-width:360px) and (max-width:384px){
-    html{font-size:64% !important;}
+
+@media only screen and (min-width:360px) and (max-width:384px) {
+	html {
+		font-size: 64% !important;
+	}
 }
+
+
 /*Iphone6,Iphone6plus*/
+
 @media only screen and (min-width:385px) and (max-width:435px) {
-    html{font-size:82.5% !important;}
+	html {
+		font-size: 82.5% !important;
+	}
 }
+
+
 /**更大设备*/
-@media only screen and (min-width:436px)  {
-    html{font-size:92% !important;}
+
+@media only screen and (min-width:436px) {
+	html {
+		font-size: 92% !important;
+	}
 }
+
+
 /**更大设备*/
+
+
 /*@media only screen and (min-width:757px) and (max-width:1000px) {
     html{font-size:100% !important;}
 }*/
+
+
 /*body>div>div:last-of-type{
 	background-color: white;
 }*/
+
+
 /*2倍宽度*/
-.twice-line{
+
+.twice-line {
 	height: 4.8rem;
-	overflow : hidden;
+	overflow: hidden;
 	text-overflow: ellipsis;
 	display: -webkit-box;
 	-webkit-line-clamp: 2;
 	-webkit-box-orient: vertical;
 }
+
+
 /**
  * 一行
  */
-.single-line{
+
+.single-line {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
-.background-white{
+
+.triple-line {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	display: -webkit-box;
+	/*设置弹性盒模型*/
+	-webkit-line-clamp: 3;
+	/*文本占的行数,如果要设置2行加...则设置为2*/
+	-webkit-box-orient: vertical;
+	/*子代元素垂直显示*/
+}
+
+.background-white {
 	background-color: white;
 }
+
+
 /*body>div>div>div :last-of-type{
 	background-color: white;
 }*/
-header>a{
+
+header>a {
 	padding-top: 1.2rem;
 	font-size: 1.5rem;
 }
-.post-icon:last-of-type{
+
+.post-icon:last-of-type {
 	padding-top: 1.2rem;
 	font-size: 1.5rem;
 }
-.display-none:last-of-type{
+
+.display-none:last-of-type {
 	display: none;
 }
-.display-block{
+
+.display-block {
 	display: block;
 }
+
+
 /*分割线色值*/
-.mui-table-view-cell:after{
-    background-color: #dedfe0;
-}
-/*分割线色值*/
-.mui-table-view-divider:after {
-	background-color: #dedfe0;
-}
-/*分割线色值*/
-.mui-table-view-divider:before {
+
+.mui-table-view-cell:after {
 	background-color: #dedfe0;
 }
 
+
+/*分割线色值*/
+
+.mui-table-view-divider:after {
+	background-color: #dedfe0;
+}
+
+
+/*分割线色值*/
+
+.mui-table-view-divider:before {
+	background-color: #dedfe0;
+}
 
 .mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
 	color: #00A5E0;
 	border-bottom: 2px solid #00A5E0;
 }
+
+
 /*底部评论套装*/
-.input-footerContainer{
+
+.input-footerContainer {
 	width: 100%;
 	position: fixed;
 	padding-top: 10px;
@@ -149,10 +260,12 @@ header>a{
 	background-color: white;
 	border-top: solid thin darkgray;
 }
-.input-footerContainer .input-text{
+
+.input-footerContainer .input-text {
 	width: 80%;
 }
-.input-footerContainer .send-icon{
+
+.input-footerContainer .send-icon {
 	width: 18%;
 	text-align: center;
 }
