增加取消赞图标

--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -225,6 +225,8 @@
 
 .icon-shipinlei-xunhuanguiji:before { content: "\e634"; }
 
+.icon-quxiaozan:before { content: "\e637"; }
+
 .icon-jiaxiabiao:before { content: "\e639"; }
 
 .icon-banxiabiao:before { content: "\e638"; }
