--- a/JiaoBaoYun-hb/css/quan/custom-textarea.css
+++ b/JiaoBaoYun-hb/css/quan/custom-textarea.css
@@ -1,7 +1,6 @@
 /**
  * 输入内容父控件div
  */
-
 .input-content {
 	width: 100%;
 	height: 25rem;
@@ -13,7 +12,6 @@
 /**
  * 输入内容样式
  */
-
 textarea {
 	border-radius: 5px 5px 0 0;
 	border-color: transparent;
@@ -21,8 +19,6 @@ textarea {
 	width: 100%;
 	height: 20rem;
 }
-
-
 /**
  * 拍照、添加文件样式
  */
@@ -37,13 +33,12 @@ textarea {
 	float: left;
 	margin-top: -15px;
 }
-
-
 /**
  * 样式
  */
-
-div>.icon-tuku:before,
+div>.icon-xiangji:before,
+.icon-xiangce:before,
+.icon-tuku:before,
 .icon-shipin:before,
 .icon-xiangji1:before {
 	font-size: 3.0rem;
