展现显示图片

--- a/JiaoBaoYun-hb/css/quan/custom-textarea.css
+++ b/JiaoBaoYun-hb/css/quan/custom-textarea.css
@@ -44,3 +44,19 @@ div>.icon-xiangji:before,
 	font-size: 3.0rem;
 	color: gray;
 }
+.img-div{
+	position: relative;
+	width: 25%;
+	float: left;
+	text-align: center;
+}
+.img-div img{
+	padding-top: 0.5rem;
+	width: 80%;
+}
+.icon-guanbi{
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+.i
