更新阿里图库图标

--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -11,131 +11,167 @@
 	-webkit-text-stroke-width: 0.2px;
 }
 
-.icon-bianji:before { content: "\3486"; }
+.icon-tianjia1:before { content: "\e603"; }
 
-.icon-close:before { content: "\e646"; }
+.icon-jiantouxia:before { content: "\e6a1"; }
 
-.icon-zone:before { content: "\e64c"; }
+.icon-dangan:before { content: "\e614"; }
 
-.icon-guanbi:before { content: "\e614"; }
+.icon-llhomesearch:before { content: "\e606"; }
 
-.icon-shexiangji:before { content: "\e60e"; }
-
-.icon-dangan:before { content: "\e627"; }
-
-.icon-xie:before { content: "\e604"; }
-
-.icon-fanxiangpaixu:before { content: "\e619"; }
+.icon-gengduo:before { content: "\e793"; }
 
 .icon-kangfuzuoye:before { content: "\e654"; }
 
-.icon-trash:before { content: "\e620"; }
+.icon-shanchushiyong:before { content: "\e620"; }
 
-.icon-fenxiang:before { content: "\e600"; }
-
-.icon-jia:before { content: "\e60a"; }
-
-.icon-kongjian:before { content: "\e669"; }
-
-.icon-newmessage:before { content: "\e731"; }
+.icon-iconfont14:before { content: "\e6ff"; }
 
 .icon-tongxunlu:before { content: "\e65b"; }
 
-.icon-xiaoxi:before { content: "\e64d"; }
+.icon-duihuan:before { content: "\e607"; }
 
-.icon-shezhi:before { content: "\e606"; }
+.icon-xiaoxi:before { content: "\e64c"; }
 
-.icon-yunpan1:before { content: "\e694"; }
+.icon-fenxiang:before { content: "\e65a"; }
 
-.icon-jiaoyu:before { content: "\e7ec"; }
+.icon-yunpan:before { content: "\e694"; }
 
 .icon-re:before { content: "\e672"; }
 
-.icon-dianzan:before { content: "\e63c"; }
-
-.icon-shezhi1:before { content: "\e631"; }
-
-.icon-group:before { content: "\e753"; }
-
-.icon-jifen:before { content: "\e6db"; }
+.icon-like_more:before { content: "\e616"; }
 
 .icon-biji1:before { content: "\e656"; }
 
-.icon-jiaqun:before { content: "\e60d"; }
+.icon-gengduo2:before { content: "\e683"; }
+
+.icon-wenda1:before { content: "\e68b"; }
+
+.icon-shijiankuang:before { content: "\e632"; }
+
+.icon-babycantishi:before { content: "\e6c7"; }
+
+.icon-iconfontmark:before { content: "\e624"; }
+
+.icon-iconquanbu:before { content: "\e625"; }
 
 .icon-mic:before { content: "\e666"; }
 
-.icon-date:before { content: "\e6eb"; }
-
-.icon-about:before { content: "\e605"; }
+.icon-jinbib:before { content: "\e663"; }
 
 .icon-zhuanjia:before { content: "\e63a"; }
 
-.icon-zanzan:before { content: "\e60b"; }
+.icon-yuanquan:before { content: "\e62a"; }
 
-.icon-zanzan1:before { content: "\e602"; }
+.icon-yaoqing:before { content: "\e62e"; }
 
 .icon-tianjia:before { content: "\e7f7"; }
 
-.icon-ruqun:before { content: "\e66e"; }
-
-.icon-shouye2:before { content: "\e66b"; }
-
 .icon-jixiaofenshuchaxun:before { content: "\e66c"; }
 
-.icon-paixu:before { content: "\e675"; }
+.icon-icon:before { content: "\e622"; }
 
-.icon-liaotian:before { content: "\e603"; }
+.icon-buxianshi:before { content: "\e6a4"; }
 
-.icon-qun:before { content: "\e60f"; }
+.icon-shipin:before { content: "\e602"; }
+
+.icon-wodejifen:before { content: "\e6d0"; }
+
+.icon-iconfontrenwu:before { content: "\e64b"; }
 
 .icon-biji2:before { content: "\e659"; }
 
-.icon-shubendisc:before { content: "\e682"; }
+.icon-xiaoxizhongxin:before { content: "\e605"; }
 
-.icon-xiaoxizhongxin:before { content: "\e611"; }
+.icon-gengduo1:before { content: "\e627"; }
 
-.icon-xie1:before { content: "\e608"; }
+.icon-sousuo:before { content: "\e60c"; }
 
-.icon-qunziliao2:before { content: "\e615"; }
+.icon-pinglun:before { content: "\e724"; }
 
-.icon-upload:before { content: "\e632"; }
+.icon-jushoucang:before { content: "\e643"; }
 
-.icon-download:before { content: "\e63b"; }
+.icon-shangchuan:before { content: "\e631"; }
 
-.icon-yunpan:before { content: "\e607"; }
+.icon-xiazai:before { content: "\e63b"; }
 
-.icon-lishijilu:before { content: "\e621"; }
+.icon-iconzhongmingming01:before { content: "\e6a3"; }
 
-.icon-renren:before { content: "\e609"; }
+.icon-store-16:before { content: "\e65c"; }
+
+.icon-shezhi:before { content: "\e61f"; }
+
+.icon-tianjiatupian:before { content: "\e61e"; }
+
+.icon-qun:before { content: "\e6e9"; }
+
+.icon-wenti:before { content: "\e700"; }
+
+.icon-tubiaolunkuohua08:before { content: "\e66d"; }
+
+.icon-zijinmingxi:before { content: "\e653"; }
+
+.icon-wodepingjia:before { content: "\e809"; }
+
+.icon-unie61b:before { content: "\e61a"; }
+
+.icon-xuesheng:before { content: "\e669"; }
 
 .icon-dongtai1:before { content: "\e671"; }
 
-.icon-liulan:before { content: "\e635"; }
+.icon-asmkticon0214:before { content: "\e817"; }
 
-.icon-liaotian1:before { content: "\e601"; }
+.icon-xiangji:before { content: "\e661"; }
+
+.icon-dakaizhuanhuan:before { content: "\e62f"; }
+
+.icon-xiajiantou:before { content: "\e649"; }
+
+.icon-shangjiantou:before { content: "\e64a"; }
+
+.icon-youjiantou:before { content: "\e64d"; }
+
+.icon-liulan:before { content: "\e630"; }
+
+.icon-yijianshengcheng:before { content: "\e60a"; }
 
 .icon-31guanzhu1xuanzhong:before { content: "\e657"; }
 
-.icon-imge:before { content: "\e650"; }
+.icon-xinjianwenjianjia:before { content: "\e604"; }
 
-.icon-xinxiaoxi:before { content: "\e673"; }
+.icon-question:before { content: "\e60d"; }
 
-.icon-tingzhi:before { content: "\e62f"; }
+.icon-wujiaoxing-copy:before { content: "\e652"; }
 
-.icon-fasong:before { content: "\e636"; }
+.icon-amount1:before { content: "\e6e7"; }
 
-.icon-wenda1:before { content: "\e66d"; }
+.icon-qiepian13:before { content: "\e611"; }
 
-.icon-qita11:before { content: "\e662"; }
+.icon-zijinmingxi1:before { content: "\e738"; }
 
-.icon-quxiaozan:before { content: "\e65f"; }
+.icon-daojiatixing:before { content: "\e60e"; }
 
-.icon-allfolder:before { content: "\e66a"; }
+.icon-qita1:before { content: "\e662"; }
 
-.icon-newfolder:before { content: "\e625"; }
+.icon-jifenduihuanjilu:before { content: "\e608"; }
+
+.icon-yuanquangou:before { content: "\e6a7"; }
+
+.icon-shoucang:before { content: "\e6ed"; }
+
+.icon-gold:before { content: "\e637"; }
+
+.icon-shanchu:before { content: "\e6b1"; }
+
+.icon-xinjian:before { content: "\e626"; }
 
 .icon-chuanshu:before { content: "\e61d"; }
+
+.icon-track-line:before { content: "\e633"; }
+
+.icon-jifenshangcheng:before { content: "\e629"; }
+
+.icon-jifenduihuanr:before { content: "\e6f3"; }
 
 .icon-wenda:before { content: "\e655"; }
 
@@ -143,93 +179,119 @@
 
 .icon-word:before { content: "\e7e8"; }
 
+.icon-lianjie:before { content: "\e69e"; }
+
+.icon-chengjiaojine:before { content: "\e621"; }
+
+.icon-yonghuming:before { content: "\e85e"; }
+
+.icon-mima:before { content: "\e85f"; }
+
+.icon-yanzhengma-copy:before { content: "\e860"; }
+
 .icon-xianshi:before { content: "\e861"; }
+
+.icon-checkbox-selected-copy-copy:before { content: "\e865"; }
+
+.icon-fuxuankuang-copy:before { content: "\e867"; }
+
+.icon-fanhui:before { content: "\e862"; }
 
 .icon-fabu:before { content: "\e863"; }
 
-.icon-support:before { content: "\e905"; }
+.icon-lishijilu-copy:before { content: "\e864"; }
+
+.icon-jiaxiaoquan-copy:before { content: "\e8ff"; }
+
+.icon-wenda-copy:before { content: "\e900"; }
+
+.icon-yunpan-copy:before { content: "\e901"; }
+
+.icon-shipin-copy:before { content: "\e600"; }
+
+.icon-shipin-copy1:before { content: "\e601"; }
+
+.icon-tianjia1-copy:before { content: "\e902"; }
+
+.icon-shanchu1-copy:before { content: "\e903"; }
+
+.icon-friend-copy:before { content: "\e904"; }
+
+.icon-support-copy:before { content: "\e905"; }
+
+.icon-xiangji2-copy:before { content: "\e906"; }
 
 .icon-jiujiajingicon02-copy:before { content: "\e907"; }
 
-.icon-tuku:before { content: "\e6b6"; }
+.icon-xiajiantou-copy:before { content: "\e866"; }
 
-.icon-dili:before { content: "\e61b"; }
+.icon-xiangji2-copy-copy:before { content: "\e908"; }
 
-.icon-shengwu:before { content: "\e61e"; }
+.icon-tuku-:before { content: "\e6b6"; }
 
-.icon-zhengzhi:before { content: "\e61f"; }
+.icon-dili:before { content: "\e609"; }
 
-.icon-jiaobaoyuntubiao:before { content: "\e610"; }
+.icon-shengwu:before { content: "\e60b"; }
 
-.icon-excel:before { content: "\e8aa"; }
+.icon-zhengzhi:before { content: "\e60f"; }
 
-.icon-mp3:before { content: "\e8ab"; }
+.icon-huaxue:before { content: "\e610"; }
 
-.icon-video:before { content: "\e8ac"; }
+.icon-icon-test:before { content: "\e928"; }
 
-.icon-txt:before { content: "\e8ad"; }
+.icon-jiujiajingicon02-copy-copy:before { content: "\e909"; }
 
-.icon-zip:before { content: "\e8ae"; }
+.icon-yaoqing-copy:before { content: "\e90a"; }
 
-.icon-file:before { content: "\e8af"; }
+.icon-qita:before { content: "\e67d"; }
 
-.icon-pdf:before { content: "\e8e2"; }
+.icon-jiaxiaohulian:before { content: "\e68f"; }
 
-.icon-yunnofile:before { content: "\e8e3"; }
+.icon-chengyuan:before { content: "\e612"; }
 
-.icon-yingyu:before { content: "\e617"; }
+.icon-dianzan:before { content: "\e658"; }
 
-.icon-lishi:before { content: "\e613"; }
+.icon-fabu-copy:before { content: "\e929"; }
 
-.icon-wuli1:before { content: "\e61c"; }
+.icon-myQuestion:before { content: "\e644"; }
 
-.icon-qita:before { content: "\e612"; }
+.icon-qunziliao:before { content: "\e615"; }
 
-.icon-yuwen:before { content: "\e616"; }
+.icon-qunguanli:before { content: "\e613"; }
 
-.icon-yasuobao:before { content: "\e8e4"; }
+.icon-biji:before { content: "\e617"; }
 
-.icon-huaxue:before { content: "\e618"; }
+.icon-dangan1:before { content: "\e618"; }
 
-.icon-shuxue:before { content: "\e61a"; }
+.icon-fenxiang1:before { content: "\e619"; }
 
-.icon-qita1:before { content: "\e67d"; }
+.icon-kangfuzuoye1:before { content: "\e61b"; }
 
-.icon-xiangji:before { content: "\e60c"; }
+.icon-biji3:before { content: "\e61c"; }
 
-.icon-yuyin:before { content: "\e622"; }
+.icon-tuku:before { content: "\e623"; }
 
-.icon-shipin:before { content: "\e623"; }
+.icon-tongxunlu1:before { content: "\e628"; }
 
-.icon-xiangji1:before { content: "\e624"; }
+.icon-qunguanli1:before { content: "\e62b"; }
 
-.icon-xiangce:before { content: "\e908"; }
+.icon-xinjian1:before { content: "\e62c"; }
 
-.icon-wenda-copy:before { content: "\e909"; }
-
-.icon-qunziliao:before { content: "\e626"; }
-
-.icon-qunguanli:before { content: "\e628"; }
-
-.icon-biji:before { content: "\e629"; }
-
-.icon-dangan1:before { content: "\e62a"; }
-
-.icon-fenxiang1:before { content: "\e62b"; }
-
-.icon-kangfuzuoye1:before { content: "\e62c"; }
-
-.icon-biji3:before { content: "\e62d"; }
-
-.icon-tuku1:before { content: "\e62e"; }
-
-.icon-tongxunlu1:before { content: "\e630"; }
-
-.icon-qunguanli1:before { content: "\e633"; }
-
-.icon-shipinlei-xunhuanguiji:before { content: "\e634"; }
+.icon-shipinlei-xunhuanguiji:before { content: "\e62d"; }
 
 .icon-jiaxiabiao:before { content: "\e639"; }
 
 .icon-banxiabiao:before { content: "\e638"; }
+
+.icon-shangchuanyunduan:before { content: "\e634"; }
+
+.icon-jiaoyu:before { content: "\e635"; }
+
+.icon-dongtai:before { content: "\e636"; }
+
+.icon-wenda2:before { content: "\e63c"; }
+
+.icon-shouye:before { content: "\e63d"; }
+
+.icon-jiaobaoyun:before { content: "\e63e"; }
 
