--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -11,167 +11,133 @@
 	-webkit-text-stroke-width: 0.2px;
 }
 
-.icon-tianjia1:before { content: "\e603"; }
+.icon-bianji:before { content: "\3486"; }
 
-.icon-jiantouxia:before { content: "\e6a1"; }
+.icon-close:before { content: "\e646"; }
 
-.icon-dangan:before { content: "\e614"; }
+.icon-zone:before { content: "\e64c"; }
 
-.icon-llhomesearch:before { content: "\e606"; }
+.icon-guanbi:before { content: "\e614"; }
 
-.icon-gengduo:before { content: "\e793"; }
+.icon-shexiangji:before { content: "\e60e"; }
+
+.icon-dangan:before { content: "\e627"; }
+
+.icon-xie:before { content: "\e604"; }
+
+.icon-fanxiangpaixu:before { content: "\e619"; }
 
 .icon-kangfuzuoye:before { content: "\e654"; }
 
-.icon-shanchushiyong:before { content: "\e620"; }
+.icon-trash:before { content: "\e620"; }
 
-.icon-iconfont14:before { content: "\e6ff"; }
+.icon-fenxiang:before { content: "\e600"; }
+
+.icon-jia:before { content: "\e60a"; }
+
+.icon-kongjian:before { content: "\e669"; }
+
+.icon-newmessage:before { content: "\e731"; }
 
 .icon-tongxunlu:before { content: "\e65b"; }
 
-.icon-duihuan:before { content: "\e607"; }
+.icon-xiaoxi:before { content: "\e64d"; }
 
-.icon-xiaoxi:before { content: "\e64c"; }
+.icon-shezhi:before { content: "\e606"; }
 
-.icon-fenxiang:before { content: "\e65a"; }
+.icon-yunpan1:before { content: "\e694"; }
 
-.icon-yunpan:before { content: "\e694"; }
+.icon-jiaoyu:before { content: "\e7ec"; }
 
 .icon-re:before { content: "\e672"; }
 
-.icon-like_more:before { content: "\e616"; }
+.icon-dianzan:before { content: "\e63c"; }
+
+.icon-shezhi1:before { content: "\e631"; }
+
+.icon-group:before { content: "\e753"; }
+
+.icon-jifen:before { content: "\e6db"; }
 
 .icon-biji1:before { content: "\e656"; }
 
-.icon-gengduo2:before { content: "\e683"; }
-
-.icon-wenda1:before { content: "\e68b"; }
-
-.icon-shijiankuang:before { content: "\e632"; }
-
-.icon-babycantishi:before { content: "\e6c7"; }
-
-.icon-iconfontmark:before { content: "\e624"; }
-
-.icon-iconquanbu:before { content: "\e625"; }
+.icon-jiaqun:before { content: "\e60d"; }
 
 .icon-mic:before { content: "\e666"; }
 
-.icon-jinbib:before { content: "\e663"; }
+.icon-date:before { content: "\e6eb"; }
+
+.icon-about:before { content: "\e605"; }
 
 .icon-zhuanjia:before { content: "\e63a"; }
 
-.icon-yuanquan:before { content: "\e62a"; }
+.icon-zanzan:before { content: "\e60b"; }
 
-.icon-yaoqing:before { content: "\e62e"; }
+.icon-zanzan1:before { content: "\e602"; }
 
 .icon-tianjia:before { content: "\e7f7"; }
 
+.icon-ruqun:before { content: "\e66e"; }
+
+.icon-shouye2:before { content: "\e66b"; }
+
 .icon-jixiaofenshuchaxun:before { content: "\e66c"; }
 
-.icon-icon:before { content: "\e622"; }
+.icon-gengduo:before { content: "\e637"; }
 
-.icon-buxianshi:before { content: "\e6a4"; }
+.icon-paixu:before { content: "\e675"; }
 
-.icon-shipin:before { content: "\e602"; }
+.icon-liaotian:before { content: "\e603"; }
 
-.icon-wodejifen:before { content: "\e6d0"; }
-
-.icon-iconfontrenwu:before { content: "\e64b"; }
+.icon-qun:before { content: "\e60f"; }
 
 .icon-biji2:before { content: "\e659"; }
 
-.icon-xiaoxizhongxin:before { content: "\e605"; }
+.icon-shubendisc:before { content: "\e682"; }
 
-.icon-gengduo1:before { content: "\e627"; }
+.icon-xiaoxizhongxin:before { content: "\e611"; }
 
-.icon-sousuo:before { content: "\e60c"; }
+.icon-xie1:before { content: "\e608"; }
 
-.icon-pinglun:before { content: "\e724"; }
+.icon-qunziliao2:before { content: "\e615"; }
 
-.icon-jushoucang:before { content: "\e643"; }
+.icon-upload:before { content: "\e632"; }
 
-.icon-shangchuan:before { content: "\e631"; }
+.icon-download:before { content: "\e63b"; }
 
-.icon-xiazai:before { content: "\e63b"; }
+.icon-yunpan:before { content: "\e607"; }
 
-.icon-iconzhongmingming01:before { content: "\e6a3"; }
+.icon-lishijilu:before { content: "\e621"; }
 
-.icon-store-16:before { content: "\e65c"; }
-
-.icon-shezhi:before { content: "\e61f"; }
-
-.icon-tianjiatupian:before { content: "\e61e"; }
-
-.icon-qun:before { content: "\e6e9"; }
-
-.icon-wenti:before { content: "\e700"; }
-
-.icon-tubiaolunkuohua08:before { content: "\e66d"; }
-
-.icon-zijinmingxi:before { content: "\e653"; }
-
-.icon-wodepingjia:before { content: "\e809"; }
-
-.icon-unie61b:before { content: "\e61a"; }
-
-.icon-xuesheng:before { content: "\e669"; }
+.icon-renren:before { content: "\e609"; }
 
 .icon-dongtai1:before { content: "\e671"; }
 
-.icon-asmkticon0214:before { content: "\e817"; }
+.icon-liulan:before { content: "\e635"; }
 
-.icon-xiangji:before { content: "\e661"; }
-
-.icon-dakaizhuanhuan:before { content: "\e62f"; }
-
-.icon-xiajiantou:before { content: "\e649"; }
-
-.icon-shangjiantou:before { content: "\e64a"; }
-
-.icon-youjiantou:before { content: "\e64d"; }
-
-.icon-liulan:before { content: "\e630"; }
-
-.icon-yijianshengcheng:before { content: "\e60a"; }
+.icon-liaotian1:before { content: "\e601"; }
 
 .icon-31guanzhu1xuanzhong:before { content: "\e657"; }
 
-.icon-xinjianwenjianjia:before { content: "\e604"; }
+.icon-imge:before { content: "\e650"; }
 
-.icon-question:before { content: "\e60d"; }
+.icon-xinxiaoxi:before { content: "\e673"; }
 
-.icon-wujiaoxing-copy:before { content: "\e652"; }
+.icon-tingzhi:before { content: "\e62f"; }
 
-.icon-amount1:before { content: "\e6e7"; }
+.icon-fasong:before { content: "\e636"; }
 
-.icon-qiepian13:before { content: "\e611"; }
+.icon-wenda1:before { content: "\e66d"; }
 
-.icon-zijinmingxi1:before { content: "\e738"; }
+.icon-qita11:before { content: "\e662"; }
 
-.icon-daojiatixing:before { content: "\e60e"; }
+.icon-quxiaozan:before { content: "\e65f"; }
 
-.icon-qita1:before { content: "\e662"; }
+.icon-allfolder:before { content: "\e66a"; }
 
-.icon-jifenduihuanjilu:before { content: "\e608"; }
-
-.icon-yuanquangou:before { content: "\e6a7"; }
-
-.icon-shoucang:before { content: "\e6ed"; }
-
-.icon-gold:before { content: "\e637"; }
-
-.icon-shanchu:before { content: "\e6b1"; }
-
-.icon-xinjian:before { content: "\e626"; }
+.icon-newfolder:before { content: "\e625"; }
 
 .icon-chuanshu:before { content: "\e61d"; }
-
-.icon-track-line:before { content: "\e633"; }
-
-.icon-jifenshangcheng:before { content: "\e629"; }
-
-.icon-jifenduihuanr:before { content: "\e6f3"; }
 
 .icon-wenda:before { content: "\e655"; }
 
@@ -179,119 +145,93 @@
 
 .icon-word:before { content: "\e7e8"; }
 
-.icon-lianjie:before { content: "\e69e"; }
-
-.icon-chengjiaojine:before { content: "\e621"; }
-
-.icon-yonghuming:before { content: "\e85e"; }
-
-.icon-mima:before { content: "\e85f"; }
-
-.icon-yanzhengma-copy:before { content: "\e860"; }
-
 .icon-xianshi:before { content: "\e861"; }
-
-.icon-checkbox-selected-copy-copy:before { content: "\e865"; }
-
-.icon-fuxuankuang-copy:before { content: "\e867"; }
-
-.icon-fanhui:before { content: "\e862"; }
 
 .icon-fabu:before { content: "\e863"; }
 
-.icon-lishijilu-copy:before { content: "\e864"; }
-
-.icon-jiaxiaoquan-copy:before { content: "\e8ff"; }
-
-.icon-wenda-copy:before { content: "\e900"; }
-
-.icon-yunpan-copy:before { content: "\e901"; }
-
-.icon-shipin-copy:before { content: "\e600"; }
-
-.icon-shipin-copy1:before { content: "\e601"; }
-
-.icon-tianjia1-copy:before { content: "\e902"; }
-
-.icon-shanchu1-copy:before { content: "\e903"; }
-
-.icon-friend-copy:before { content: "\e904"; }
-
-.icon-support-copy:before { content: "\e905"; }
-
-.icon-xiangji2-copy:before { content: "\e906"; }
+.icon-support:before { content: "\e905"; }
 
 .icon-jiujiajingicon02-copy:before { content: "\e907"; }
 
-.icon-xiajiantou-copy:before { content: "\e866"; }
+.icon-tuku:before { content: "\e6b6"; }
 
-.icon-xiangji2-copy-copy:before { content: "\e908"; }
+.icon-dili:before { content: "\e61b"; }
 
-.icon-tuku-:before { content: "\e6b6"; }
+.icon-shengwu:before { content: "\e61e"; }
 
-.icon-dili:before { content: "\e609"; }
+.icon-zhengzhi:before { content: "\e61f"; }
 
-.icon-shengwu:before { content: "\e60b"; }
+.icon-jiaobaoyuntubiao:before { content: "\e610"; }
 
-.icon-zhengzhi:before { content: "\e60f"; }
+.icon-excel:before { content: "\e8aa"; }
 
-.icon-huaxue:before { content: "\e610"; }
+.icon-mp3:before { content: "\e8ab"; }
 
-.icon-icon-test:before { content: "\e928"; }
+.icon-video:before { content: "\e8ac"; }
 
-.icon-jiujiajingicon02-copy-copy:before { content: "\e909"; }
+.icon-txt:before { content: "\e8ad"; }
 
-.icon-yaoqing-copy:before { content: "\e90a"; }
+.icon-zip:before { content: "\e8ae"; }
 
-.icon-qita:before { content: "\e67d"; }
+.icon-file:before { content: "\e8af"; }
 
-.icon-jiaxiaohulian:before { content: "\e68f"; }
+.icon-pdf:before { content: "\e8e2"; }
 
-.icon-chengyuan:before { content: "\e612"; }
+.icon-yunnofile:before { content: "\e8e3"; }
 
-.icon-dianzan:before { content: "\e658"; }
+.icon-yingyu:before { content: "\e617"; }
 
-.icon-fabu-copy:before { content: "\e929"; }
+.icon-lishi:before { content: "\e613"; }
 
-.icon-myQuestion:before { content: "\e644"; }
+.icon-wuli1:before { content: "\e61c"; }
 
-.icon-qunziliao:before { content: "\e615"; }
+.icon-qita:before { content: "\e612"; }
 
-.icon-qunguanli:before { content: "\e613"; }
+.icon-yuwen:before { content: "\e616"; }
 
-.icon-biji:before { content: "\e617"; }
+.icon-yasuobao:before { content: "\e8e4"; }
 
-.icon-dangan1:before { content: "\e618"; }
+.icon-huaxue:before { content: "\e618"; }
 
-.icon-fenxiang1:before { content: "\e619"; }
+.icon-shuxue:before { content: "\e61a"; }
 
-.icon-kangfuzuoye1:before { content: "\e61b"; }
+.icon-qita1:before { content: "\e67d"; }
 
-.icon-biji3:before { content: "\e61c"; }
+.icon-xiangji:before { content: "\e60c"; }
 
-.icon-tuku:before { content: "\e623"; }
+.icon-yuyin:before { content: "\e622"; }
 
-.icon-tongxunlu1:before { content: "\e628"; }
+.icon-shipin:before { content: "\e623"; }
 
-.icon-qunguanli1:before { content: "\e62b"; }
+.icon-xiangji1:before { content: "\e624"; }
 
-.icon-xinjian1:before { content: "\e62c"; }
+.icon-xiangce:before { content: "\e908"; }
 
-.icon-shipinlei-xunhuanguiji:before { content: "\e62d"; }
+.icon-wenda-copy:before { content: "\e909"; }
+
+.icon-qunziliao:before { content: "\e626"; }
+
+.icon-qunguanli:before { content: "\e628"; }
+
+.icon-biji:before { content: "\e629"; }
+
+.icon-dangan1:before { content: "\e62a"; }
+
+.icon-fenxiang1:before { content: "\e62b"; }
+
+.icon-kangfuzuoye1:before { content: "\e62c"; }
+
+.icon-biji3:before { content: "\e62d"; }
+
+.icon-tuku1:before { content: "\e62e"; }
+
+.icon-tongxunlu1:before { content: "\e630"; }
+
+.icon-qunguanli1:before { content: "\e633"; }
+
+.icon-shipinlei-xunhuanguiji:before { content: "\e634"; }
 
 .icon-jiaxiabiao:before { content: "\e639"; }
 
 .icon-banxiabiao:before { content: "\e638"; }
-
-.icon-shangchuanyunduan:before { content: "\e634"; }
-
-.icon-jiaoyu:before { content: "\e635"; }
-
-.icon-dongtai:before { content: "\e636"; }
-
-.icon-wenda2:before { content: "\e63c"; }
-
-.icon-shouye:before { content: "\e63d"; }
-
-.icon-jiaobaoyun:before { content: "\e63e"; }
 
