--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
@@ -64,3 +64,31 @@ p{
 .ask-container{
 	padding-top: .5rem;
 }
+.mui-segmented-control.mui-scroll-wrapper .mui-scroll{
+	height: 6rem;
+}
+.experts-content{
+	background-color: #ffffff;
+}
+.mui-segmented-control.mui-scroll-wrapper{
+height: 8rem;	
+}
+
+.mui-segmented-control.mui-segmented-control-inverted .mui-control-item img{
+	width: 3rem;
+	height: 3rem;
+	border-radius:50px;
+}
+.mui-segmented-control.mui-segmented-control-inverted .mui-control-item{
+	border: 1px solid #f3f3f3  ;
+	height: 7rem ;
+	width: 7rem ;
+	vertical-align: middle;
+	text-align: center;
+	padding: 1rem 1.5rem ;
+	margin: 0 0.25rem;
+}
+.mui-segmented-control.mui-segmented-control-inverted .mui-control-item p{
+	color: #000000;
+	margin: 0px; 
+}
