--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -218,9 +218,13 @@ header>a {
 .display-none:last-of-type {
 	display: none;
 }
-
+/*block*/
 .display-block {
 	display: block;
+}
+/*inline-block*/
+.display-inlineBlock{
+	display: inline-block;
 }
 
 
