--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi.css
@@ -1,37 +1,36 @@
-.navigation{
-	position: relative;
-}
-.main-navigation{
-	max-width: 80%;
-}
-.more-navigation{
+.more-navigation {
 	position: absolute;
 	height: 40px;
 	right: 0;
 	top: 0;
 	text-align: center;
-	padding:5px 10px;
+	padding: 5px 10px;
 	border: solid thin #000000 2px;
 	box-shadow: -5px 0 5px -3px #d2d2d2;
-}
-.mui-slider-indicator:last-of-type{
-	height: 40px;
-	background-color: #ffffff;
-}
-.mui-control-item:last-of-type{
-	height: 40px;
+	background-color: transparent;
 }
 
-.icon-qita11{
-	font-size:20px;
-	color:grey;
+.icon-qita11 {
+	font-size: 20px;
+	color: grey;
 }
-.navigation{
-	background-color: white;
-	height: 40px;
-}
-.more-navigation p{
+
+.more-navigation p {
 	line-height: 50%;
 }
 
+.mui-slider .mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
+	border-bottom: 2px solid #00A5E0;
+}
 
+.mui-segmented-control.mui-scroll-wrapper {
+	height: 40px;
+}
+
+.mui-slider-indicator.mui-segmented-control {
+	background-color: transparent;
+}
+.mui-slider .mui-segmented-control.mui-segmented-control-inverted~.mui-slider-group .mui-slider-item {
+	 border-top: none;
+	 border-bottom: none;
+ }
