--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
@@ -1,3 +1,15 @@
+.search-input{
+	max-width: 80%;
+}
+.mui-search .mui-placeholder {
+    text-align: left;
+    padding-left: .5rem;
+    font-size: 1.5rem;
+}
+.mui-input-row.mui-search .mui-icon-clear
+{
+	right: 20%;
+}
 .mui-scroll-wrapper {
 	padding-top: 44px;
 }
@@ -17,7 +29,7 @@
 }
 
 .mui-bar~.mui-content .mui-fullscreen {
-	top: 44px;
+	top: 10px;
 	height: auto;
 }
 
