--- a/JiaoBaoYun-hb/css/sciedu/sciedu.css
+++ b/JiaoBaoYun-hb/css/sciedu/sciedu.css
@@ -1,4 +1,5 @@
 /*科教样式*/
+
 .secedu-body {
 	/*内容*/
 	padding-top: 5px;
@@ -27,4 +28,9 @@
 
 .mui-col-sm-4 img {
 	width: 100%;
+}
+
+.mui-table-view-cell:before,
+.mui-table-view-cell:after {
+	left: 0px;
 }
