--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-expertAllComment.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-expertAllComment.css
@@ -1,37 +1,57 @@
-.Ask-Title
-{
-	color: #323232;
-}
 .mui-scroll-wrapper {
 	padding-top: 44px;
 }
 
-.mui-table-view li {
+.mui-table-view-cell {
 	border-bottom: #EFEFEF solid 1px;
-	padding: 0;
+	padding: 1rem;
 }
-
+.mui-table-view-cell div {
+	min-height: 5rem;
+	margin: 0.75rem 0;
+	background-color: #f7f8fa;
+	padding: 0 1rem;
+}
+.mui-table-view-cell p:nth-child(1)
+{
+	color: #808080;
+}
+.mui-table-view-cell p:nth-child(2)
+{
+	color: #b7b7b7;
+}
+.mui-table-view-cell div p{
+	min-height: 3rem;
+}
+.mui-table-view-cell div p:nth-child(1) {
+	font-size: 1.2rem;
+	line-height: 3rem;
+	font-weight: bold;
+	white-space:nowrap; 
+	overflow:hidden; 
+	text-overflow:ellipsis;
+	color: #222222;
+}
+.mui-table-view-cell div p:nth-child(2) {
+	color: #323232;
+	}
+	
+	
 .mui-table-view img {
-	width: 3rem;
-	height: 3rem;
-	margin: 1rem;
+	width: 2rem;
+	height: 2rem;
+	margin: 0.5rem 0.5rem 0.5rem 0rem;
 	float: left;
 	display: block;
 	border-radius: 50%;
 }
-
-.mui-table-view li div {
-	min-height: 5rem;
-	padding: 0.75rem 0;
-}
-
 .mui-table-view li div p {
 	margin: 0;
 }
-
 .mui-table-view li div p span {
 	color: #20b7f0;
 }
+
 
 .mui-bar~.mui-content .mui-fullscreen {
 	top: 44px;
