--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-expertAllComment.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-expertAllComment.css
@@ -3,7 +3,7 @@
 }
 
 .mui-table-view-cell {
-	border-bottom: #EFEFEF solid 1px;
+	border-bottom: #e4e4e4 solid 1px;
 	padding: 1rem;
 }
 .mui-table-view-cell div {
