--- a/JiaoBaoYun-hb/css/quan/about-me.css
+++ b/JiaoBaoYun-hb/css/quan/about-me.css
@@ -12,7 +12,7 @@
 
 .refer-content {
 	width: 100%;
-	height: 4rem;
+	/*height: 4rem;*/
 	background-color: #fffbff;
 	padding: .5rem;
 }
@@ -83,4 +83,7 @@ p span {
 }
 .title-words{
 	color: #636563;
+}
+.break-words{
+	word-wrap: break-word;
 }
