--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi.css
@@ -7,7 +7,8 @@
 	padding: 5px 10px;
 	border: solid thin #000000 2px;
 	box-shadow: -5px 0 5px -3px #d2d2d2;
-	background-color: transparent;
+	background-color: #F5F5F5;
+	z-index: 2;
 }
 
 .icon-qita11 {
@@ -17,10 +18,20 @@
 
 .more-navigation p {
 	line-height: 50%;
+	color: #222222;
+}
+
+.more-navigation a {
+	color: #222222;
+}
+
+.mui-slider .mui-segmented-control.mui-segmented-control-inverted .mui-control-item {
+	color: #222222;
 }
 
 .mui-slider .mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
-	border-bottom: 2px solid #00A5E0;
+	border-bottom: 2px solid #1db8f5;
+	color: #00A5E0;
 }
 
 .mui-segmented-control.mui-scroll-wrapper {
@@ -30,7 +41,8 @@
 .mui-slider-indicator.mui-segmented-control {
 	background-color: #F5F5F5;
 }
+
 .mui-slider .mui-segmented-control.mui-segmented-control-inverted~.mui-slider-group .mui-slider-item {
-	 border-top: none;
-	 border-bottom: none;
- }
+	border-top: none;
+	border-bottom: none;
+}
