--- a/JiaoBaoYun-hb/css/mine/apply.css
+++ b/JiaoBaoYun-hb/css/mine/apply.css
@@ -1,3 +1,39 @@
+.search-form .mui-input-row {
+	line-height: 2rem;
+}
+
+.search-form .search-btn {
+	line-height: 3rem;
+	padding: 6px 0;
+	display: inline;
+}
+.mui-btn-blue,
+.mui-btn-primary,
+input[type=submit]:enabled:active {
+	color: #fff;
+	border: #13b7f6;
+	background-color: #13b7f6;
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+.search-form input:nth-child(1) {
+	width: 87%;
+	background-color: #ffffff;
+	text-align: left;
+	border-radius: 50px;
+	padding: 0 15px;
+	color: #000000;
+}
+
+.mui-btn-blue,
+.mui-btn-primary,
+input[type=submit] {
+	color: #fff;
+	border: #13b7f6;
+	background-color: #13b7f6;
+	font-size: 1.5rem;
+	font-weight: bold;
+}
 a img {
 	width: 4rem;
 	height: 4rem;
