--- a/JiaoBaoYun-hb/css/utils/bubble.css
+++ b/JiaoBaoYun-hb/css/utils/bubble.css
@@ -11,7 +11,7 @@
         border-radius: 5px;
         padding:2.5%;
         margin:2.5%;
-        border: 1px solid #ccc;
+        border: 1px solid #E4E4E4;
     }
     .chat_content_top{
     	width: 95%;
