--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
@@ -58,7 +58,8 @@ input[type=submit]:enabled:active {
 
 #history_container .mui-table-view-cell>a {
 	line-height: 1rem;
-	padding: 0.5rem 1.1rem;
+	padding: 0.5rem 1.5rem;
+	margin: -1.1rem -1.5rem;
 }
 .icon-del
 {
@@ -95,6 +96,7 @@ input[type=submit]:enabled:active {
 }
 #history_container span{
 	color: #323232;
+	line-height: 1rem;
 }
 
 .mui-table-view-cell {
