--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
@@ -1,3 +1,13 @@
+.search-form .mui-icon-clear
+{
+	position: relative!important;
+	top: 1px!important;
+    right: 38px!important;
+    
+    margin-right: -38px!important;
+}
+  
+
 .search-form .mui-input-row {
 	line-height: 2rem;
 	text-align: left;
@@ -5,11 +15,7 @@
 
 .search-form .search-btn {
 	width: 11%;
-	line-height: 3rem;
-	padding: 0px 0;
-	margin: 0.8rem 0 0.7rem 0;
-	display: inline;
-	height: 2.5rem;
+ 
 }
 
 .mui-btn-blue,
@@ -39,17 +45,13 @@ input[type=submit]:enabled:active {
 	background-color: #ffffff;
 	text-align: left;
 	border-radius: 50px;
-	padding: 0 1.5rem;
-	margin-top: 8px;
-    margin-bottom: 0.7rem;
 	color: #000000;
 }
 
 #history_container {
-	position: absolute;
 	width: 100%;
-	margin-top: -0.9rem;
-	z-index: 2;
+	padding-top: 3rem;
+ 	top:0;
 }
 
 #history_container .mui-table-view-cell .mui-icon-search {
@@ -91,9 +93,7 @@ input[type=submit]:enabled:active {
 #list-container {
 	padding-top: 3.5rem;
 }
-#history_container {
-	padding-top: 4.4rem;
-}
+
 #history_container span{
 	color: #323232;
 	line-height: 1rem;
@@ -198,12 +198,3 @@ input[type=submit]:enabled:active {
 .mui-slider-indicator.mui-segmented-control {
 	background-color: #efeff4;
 }
-.search-form .mui-icon-clear
-{
-	position: relative!important;
-	top: 1px!important;
-    right: 38px!important;
-    
-    margin-right: -38px!important;
-}
-  
