--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
@@ -1,13 +1,3 @@
-.search-form .mui-icon-clear
-{
-	position: relative!important;
-	top: 1px!important;
-    right: 38px!important;
-    
-    margin-right: -38px!important;
-}
-  
-
 .search-form .mui-input-row {
 	line-height: 2rem;
 	text-align: left;
@@ -15,7 +5,11 @@
 
 .search-form .search-btn {
 	width: 11%;
- 
+	line-height: 3rem;
+	padding: 0px 0;
+	margin: 0.8rem 0 0.7rem 0;
+	display: inline;
+	height: 2.5rem;
 }
 
 .mui-btn-blue,
@@ -45,10 +39,28 @@ input[type=submit]:enabled:active {
 	background-color: #ffffff;
 	text-align: left;
 	border-radius: 50px;
+	padding: 0 1.5rem;
+	margin-top: 8px;
+    margin-bottom: 0.7rem;
 	color: #000000;
 }
 
+#history_container {
+	position: absolute;
+	width: 100%;
+	margin-top: -0.9rem;
+	z-index: 2;
+}
 
+#history_container .mui-table-view-cell .mui-icon-search {
+	font-size: 1.8rem;
+}
+
+#history_container .mui-table-view-cell>a {
+	line-height: 1rem;
+	padding: 0.5rem 1.5rem;
+	margin: -1.1rem -1.5rem;
+}
 .icon-del
 {
 	    width: 3rem;
@@ -78,6 +90,49 @@ input[type=submit]:enabled:active {
 
 #list-container {
 	padding-top: 3.5rem;
+}
+#history_container {
+	padding-top: 4.4rem;
+}
+#history_container span{
+	color: #323232;
+	line-height: 1rem;
+}
+
+.mui-table-view-cell {
+	/*border-bottom: #EFEFEF solid 1px;*/
+	padding: 1.5rem 1rem;
+}
+#history_container  .mui-table-view-cell:last-child
+{
+	line-height:1rem;
+	text-align: center;
+}
+.mui-table-view-cell p {}
+
+.mui-table-view-cell p:nth-child(1) {
+	font-size: 1.5rem;
+	font-weight: bold;
+	color: #000000;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.mui-bar~.mui-content .mui-fullscreen {
+	top: 10px;
+	height: auto;
+}
+
+.mui-pull-top-tips {
+	position: absolute;
+	top: -20px;
+	left: 50%;
+	margin-left: -25px;
+	width: 40px;
+	height: 40px;
+	border-radius: 100%;
+	z-index: 1;
 }
 
 .mui-bar~.mui-pull-top-tips {
@@ -143,3 +198,12 @@ input[type=submit]:enabled:active {
 .mui-slider-indicator.mui-segmented-control {
 	background-color: #efeff4;
 }
+.search-form .mui-icon-clear
+{
+	position: relative!important;
+	top: 1px!important;
+    right: 38px!important;
+    
+    margin-right: -38px!important;
+}
+  
