班级空间 发布按钮
不知道为啥 项目里没啦

--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -209,6 +209,8 @@
 
 .icon-xiangce:before { content: "\e908"; }
 
+.icon-fabu-copy:before { content: "\e929"; }
+
 .icon-myQuestion:before { content: "\e644"; }
 
 .icon-wenda-copy:before { content: "\e909"; }
