--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -228,7 +228,7 @@ div>.icon-xiangce:before,
 .mui-grid-view.mui-grid-9 .mui-table-view-cell{
 	padding: 0;
 }
-.icon-xie1:before,.icon-renren:before{
+.icon-fabu-copy:before,.icon-renren:before{
 	font-size: 1.8rem;
 }
 .mui-table-view-cell{
