--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -231,6 +231,7 @@ div>.icon-xiangce:before,
 .icon-fabu-copy:before,.icon-renren:before{
 	font-size: 2.0rem;
 }
-.mui-table-view-cell{
+/*.mui-table-view-cell{
 	padding: 0rem;
-}
+}*/
+
